--- a/user/themes/learn4/scss/theme/_offcanvas.scss
+++ b/user/themes/learn4/scss/theme/_offcanvas.scss
@@ -57,15 +57,29 @@
             top: 0;
             //background: rgba(#000, 0.3);
             //border-bottom: 1px solid rgba(#fff, 0.1);
-            padding: 10px 20px;
-            box-shadow: 0 10px 10px -10px rgba(#000, 0.3);
+            padding: 10px 10px 20px 10px;
 
             #logo {
                 display: inline-block;
-                margin: 0 2.5rem 0.5rem;
-
+                width: 100%;
+                text-align: right;
+                margin-bottom: 5px;
                 path {
                     fill: rgba(#fff, 0.8) !important;
+                }
+                #logo-aqi {
+                    font-weight: bold;
+                    font-size: 1.1rem;
+                    color: #fff;
+                }
+                #logo-docs {
+                    font-weight: bold;
+                    font-size: 0.9rem;
+                    padding: 0px 5px;
+                    background: $deep-well;
+                    border-radius: 3px;
+                    margin-left: 5px;
+                    color: white;
                 }
 
             }
@@ -138,12 +152,17 @@
                         margin-top: .3rem;
 
                         &.active, &.parent {
-                            background-color: rgba(#000, 0.2);
+                            background-color: rgba(#000, 0.1);
                             margin-left: -1rem;
                             padding-left: 1rem;
-                            padding-top: 0.25rem;
-                            padding-bottom: 0.25rem;
+                            //padding-top: 0.25rem;
+                            //padding-bottom: 0.25rem;
+                        }
 
+                        &.active > a {
+                            font-weight: bold;
+                            border-right: solid 10px $clouds;
+                            color: $clouds;
                         }
                     }
 
@@ -166,11 +185,16 @@
 
                 li {
                     &.active > a {
-                        background-color: $primary-color;
-                        color: #fff;
+                        font-weight: bold;
+                        border-right: solid 10px $clouds;
+
+                    }
+
+                    &.active > a {
+                        //background-color: $primary-color;
+                        color: $clouds;
                         margin-left: -0.4rem;
                         padding-left: 0.4rem;
-
                     }
 
                     a > span > b {
@@ -258,7 +282,7 @@
 
 /** Defaults (purple) **/
 .off-canvas .learn-sidebar:before {
-    background: linear-gradient(150deg, #0766E2 0, #A638F5 100%);
+    background: linear-gradient(150deg, #0766E2 0, #0766E2 100%);
 }
 
 /** Secondary (green) **/
