--- a/user/themes/learn4/scss/theme/_body.scss
+++ b/user/themes/learn4/scss/theme/_body.scss
@@ -13,7 +13,8 @@
     flex-direction: column;
 
     #start {
-        padding: 2rem 3rem;
+        //padding: 2rem 3rem;
+        padding: 2rem 24rem 2rem 4rem;
 
         @include breakpoint(xl) {
             padding: 2rem 2rem;
