--- a/user/themes/learn4/scss/theme/_topbar.scss
+++ b/user/themes/learn4/scss/theme/_topbar.scss
@@ -68,6 +68,10 @@
         }
     }
 
+    .btn {
+        margin: 0 10px;
+    }
+
     .progress {
         position: absolute;
         bottom: -1px;
