--- a/user/themes/learn4/scss/spectre/_buttons.scss
+++ b/user/themes/learn4/scss/spectre/_buttons.scss
@@ -8,6 +8,7 @@
   cursor: pointer;
   display: inline-block;
   font-size: $font-size;
+  font-weight: 100;
   height: $control-size;
   line-height: $line-height;
   outline: none;
@@ -26,17 +27,18 @@
     background: $secondary-color;
     border-color: $primary-color-dark;
     text-decoration: none;
+    color: $clouds;
   }
   &:active,
   &.active {
     background: $primary-color-dark;
     border-color: darken($primary-color-dark, 5%);
-    color: $light-color;
+    color: $clouds;
     text-decoration: none;
     &.loading {
       &::after {
-        border-bottom-color: $light-color;
-        border-left-color: $light-color;
+        border-bottom-color: $clouds;
+        border-left-color: $clouds;
       }
     }
   }
