--- a/user/themes/learn4/templates/partials/base.html.twig
+++ b/user/themes/learn4/templates/partials/base.html.twig
@@ -17,6 +17,7 @@
 {% endblock head %}
 
 {% block stylesheets %}
+    {% do assets.addCss('theme://css/custom.css') %}
     {% do assets.addCss('theme://css/fork-awesome.min.css') %}
     {% do assets.addCss('theme://css-compiled/spectre'~compress) %}
     {% do assets.addCss('theme://css-compiled/theme'~compress) %}
