--- a/user/themes/learn4/templates/default.html.twig
+++ b/user/themes/learn4/templates/default.html.twig
@@ -4,6 +4,8 @@
         {% include 'partials/page.html.twig' %}
     {% endblock %}
 
-    {% block footer %}{% endblock %}
+    {% block footer %}
+        {% include 'partials/footer.html.twig' %}
+    {% endblock %}
 
 {% endembed %}
