--- a/user/themes/learn4/templates/partials/footer.html.twig
+++ b/user/themes/learn4/templates/partials/footer.html.twig
@@ -1,5 +1,40 @@
 <section id="footer" class="section">
     <section class="container {{ grid_size }}">
-        <p>Powered by <a href="http://getgrav.org">Grav</a> + <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://trilby.media">Trilby Media</a>.</p>
+        <div class="container footer-line-1">
+          <div class="columns">
+            <div class="column col-1"></div>
+            <div class="column col-2"><a href="">Products</a></div>
+            <div class="column col-2"><a href="">Insights</a></div>
+            <div class="column col-2"><a href="">About us</a></div>
+            <div class="column col-2"><a href="">Events</a></div>
+            <div class="column col-2"><a href="">Careers</a></div>
+            <div class="column col-1"></div>
+          </div>
+        </div>
+
+        <div class="container footer-line-2">
+          <div class="columns">
+            <div class="column col-2"></div>
+            <div class="column col-2"><a href="">PRIVACY POLICY</a></div>
+            <div class="column col-2"><a href="">WEBSITE CREDITS</a></div>
+            <div class="column col-2"><a href="">CONTACT</a></div>
+            <div class="column col-2"><a href="">NEWSLETTER</a></div>
+            <div class="column col-2"></div>
+          </div>
+        </div>
+
+        <div class="container privacy">
+          <div class="columns">
+            <div class="column col-12"><a href="">PRIVACY SETTINGS</a></div>
+          </div>
+        </div>
+
+        <div class="container bottom-line">
+          <div class="columns">
+            <div class="column col-6 copyright" ><i class="fa fa-copyright"></i> ARVATO INFOSCORE GMBH</div>
+            <div class="column col-6 social" ><i class="fa fa-linkedin"></i> <i class="fa fa-xing"></i> <i class="fa fa-twitter"></i> <i class="fa fa-youtube-play"></i></div>
+          </div>
+        </div>
+
     </section>
 </section>
