--- a/user/themes/learn4/css/custom.css
+++ b/user/themes/learn4/css/custom.css
@@ -1,3 +1,5 @@
+/* Getting started page */
+
 .getting-started .card {
    background: #fff;
    min-height: 240px;
@@ -17,6 +19,7 @@
 
 .products .card {
   background: #fff;
+  min-height: 190px;
 }
 
 hr {
@@ -46,4 +49,41 @@ hr {
 
 .api-explorer button {
   margin-top: 10px;
+}
+
+/* Footer section */
+
+#footer {
+  background: #f6f6f6;
+}
+
+.footer-line-1 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.footer-line-2 {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  font-size: 0.65rem;
+}
+
+.privacy {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  font-size: 0.65rem;
+}
+
+.bottom-line {
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.bottom-line .copyright{
+  text-align: left;
+}
+
+.bottom-line .social{
+  text-align: right;
+  font-size: 1rem;
 }
