--- a/user/themes/learn4/scss/theme/_offcanvas.scss
+++ b/user/themes/learn4/scss/theme/_offcanvas.scss
@@ -282,7 +282,7 @@
 
 /** Defaults (purple) **/
 .off-canvas .learn-sidebar:before {
-    background: linear-gradient(150deg, #0766E2 0, #0766E2 100%);
+    background: linear-gradient(150deg, #0779B4 0, #0779B4 100%);
 }
 
 /** Secondary (green) **/
