--- a/user/themes/learn4/scss/theme/_variables.scss
+++ b/user/themes/learn4/scss/theme/_variables.scss
@@ -22,8 +22,8 @@ $silver: #BDC3C7;
 $concrete: #95A5A6;
 $asbestos: #7F8C8D;
 
-$primary-color: #1A73EC !default;
-$secondary-color: #1A73EC !default;
+$primary-color: #0779B4 !default;
+$secondary-color: #0779B4 !default;
 $dark-color: #454d5d !default;
 $body-font-color: darken($dark-color, 5%) !default;
 $link-color: darken($primary-color, 5%) !default;
