Started adding content for products/contact us/getting started/api-explorer

--- a/user/themes/learn4/templates/partials/topbar.html.twig
+++ b/user/themes/learn4/templates/partials/topbar.html.twig
@@ -26,8 +26,8 @@
     {% endif %}
   </div>
 
-  <button class="btn btn-sm btn-link"><i class="fa fa-code"></i> API-Explorer</button>
-  <button class="btn btn-sm btn-link"><i class="fa fa-life-ring"></i> Need help?</button>
+  <a class="btn btn-sm btn-link" href="https://bfs-dev-aqi-apim.developer.azure-api.net/" target="_blank"><i class="fa fa-code"></i> API-Explorer</a>
+  <a class="btn btn-sm btn-link" href="/contact-us"><i class="fa fa-life-ring"></i> Need help?</a>
   <button class="btn btn-sm btn-primary">Registration</button>
 
   <div class="progress"></div>
