Started working on getting started. Added sign up form.

--- a/user/themes/learn4/templates/partials/topbar.html.twig
+++ b/user/themes/learn4/templates/partials/topbar.html.twig
@@ -28,7 +28,7 @@
 
   <a class="btn btn-sm btn-link" href="https://bfs-dev-aqi-apim.developer.azure-api.net/" target="_blank"><i class="fa fa-code"></i> API-Explorer</a>
   <a class="btn btn-sm btn-link" href="/contact-us"><i class="fa fa-life-ring"></i> Need help?</a>
-  <button class="btn btn-sm btn-primary">Registration</button>
+  <a class="btn btn-sm btn-primary" href="/getting-started/registration">Create your account</a>
 
   <div class="progress"></div>
 </div>
